# nuro

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: test-layer-ownership.sh  test-proposal-review.sh  validate-layer-contracts.sh
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
crates/nuro-a2a/: Cargo.toml
crates/nuro-a2a/src/: client.rs  lib.rs  server.rs  types.rs
crates/nuro-adk/: Cargo.toml
crates/nuro-adk/src/: lib.rs  starter.rs
crates/nuro-core/: Cargo.toml
crates/nuro-core/src/: agent.rs  error.rs  event.rs  lib.rs  llm.rs  message.rs  tool.rs
crates/nuro-graph/: Cargo.toml
crates/nuro-graph/src/: graph.rs  lib.rs  node.rs  state.rs
crates/nuro-llm/: Cargo.toml
crates/nuro-llm/src/: lib.rs  mock.rs  openai.rs  provider_adapter.rs  streaming_mock.rs
crates/nuro-macros/: Cargo.toml
crates/nuro-macros/src/: lib.rs
crates/nuro-mcp/: Cargo.toml
crates/nuro-mcp/src/: client.rs  lib.rs  rpc.rs  server.rs
crates/nuro-memory/: Cargo.toml
crates/nuro-memory/src/: conversation.rs  lib.rs  store.rs
crates/nuro-rag/: Cargo.toml
crates/nuro-rag/src/: indexer.rs  lib.rs  retriever.rs  vector.rs
crates/nuro-runtime/: Cargo.toml
crates/nuro-runtime/migrations/postgres/: 001_create_runtime_tables.sql
crates/nuro-runtime/src/: agent_loop.rs  checkpoint_store.rs  event_store.rs  lib.rs  replay.rs  runtime.rs  tracing_middleware.rs
crates/nuro-server/: Cargo.toml
crates/nuro-server/src/: lib.rs  models.rs  policy.rs  service.rs  ui.rs
crates/nuro-tools/: Cargo.toml
crates/nuro-tools/src/: calculator.rs  lib.rs  toolbox.rs
docs/: Nuro_—_Rust_Agent_SDK_技术架构设计文档.lark.md  QUICKSTART-ADVANCED.md  quickstart-adk.md  quickstart-layered.md  runtime-server-gateway.md
docs/architecture/: event-model-v1.md  layer-model.md  module-layer-mapping.md
docs/cookbook/: runtime-gateway-workflows.md
docs/evals/: runtime-gateway-regression.md
docs/examples/: layer-index.md
examples/a2a_demo/: Cargo.toml
examples/a2a_demo/src/: main.rs
examples/adk_starter/: Cargo.toml
examples/adk_starter/src/: main.rs
examples/graph_demo/: Cargo.toml
examples/graph_demo/src/: main.rs
examples/http_server/: Cargo.toml
examples/http_server/src/: main.rs
examples/mcp_demo/: Cargo.toml
examples/mcp_demo/src/: main.rs
examples/simple_chatbot/: Cargo.toml
examples/simple_chatbot/src/: main.rs
nuro/: Cargo.toml
nuro/src/: lib.rs
specs/001-runtime-workflow-reposition/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation-report.md
specs/001-runtime-workflow-reposition/artifacts/: adoption-paths.json  module-ownership.json  proposal-review-template.json
specs/001-runtime-workflow-reposition/checklists/: proposal-review.md  quickstart-validation.md  requirements.md  user-navigation.md
specs/001-runtime-workflow-reposition/contracts/: layer-classification.schema.json  proposal-review.schema.json
specs/001-runtime-workflow-reposition/fixtures/: layer-classification.test-cases.md  layer-classification.valid.json  proposal-review.breaking.invalid.json  proposal-review.test-cases.md  proposal-review.valid.json
specs/002-next-phase-platform-evolution/: plan.md  research.md  spec.md  tasks.md
specs/002-next-phase-platform-evolution/contracts/: event.schema.json  provider-adapter.md
