[package]
name = "nuro"
version = "0.1.0"
edition = "2024"
description = "Unified public API for the Nuro AI agent SDK."
license = "Apache-2.0"
repository = "https://github.com/nuro-rust/nuro"
readme = "../README.md"

[dependencies]
nuro-core = { version = "0.1.0", path = "../crates/nuro-core" }
nuro-runtime = { version = "0.1.0", path = "../crates/nuro-runtime" }
nuro-llm = { version = "0.1.0", path = "../crates/nuro-llm" }
nuro-tools = { version = "0.1.0", path = "../crates/nuro-tools" }
nuro-graph = { version = "0.1.0", path = "../crates/nuro-graph" }
nuro-memory = { version = "0.1.0", path = "../crates/nuro-memory" }
nuro-rag = { version = "0.1.0", path = "../crates/nuro-rag" }
nuro-mcp = { version = "0.1.0", path = "../crates/nuro-mcp" }
nuro-a2a = { version = "0.1.0", path = "../crates/nuro-a2a" }
nuro-server = { version = "0.1.0", path = "../crates/nuro-server" }
nuro-macros = { version = "0.1.0", path = "../crates/nuro-macros" }

[features]
default = []
openai = ["nuro-llm/openai"]
