[package]
name = "nuro-a2a"
version = "0.1.0"
edition = "2024"
description = "A2A protocol implementation for Nuro."
license = "Apache-2.0"
repository = "https://github.com/nuro-rust/nuro"
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }

nuro-core = { version = "0.1.0", path = "../nuro-core" }
