[package]
name = "nuro-llm"
version = "0.1.0"
edition = "2024"

[features]
default = []
openai = ["dep:reqwest", "dep:serde"]

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

nuro-core = { path = "../nuro-core" }
