[package]
name = "nuro-llm"
version = "0.1.0"
edition = "2024"
description = "LLM provider abstractions and implementations for Nuro."
license = "Apache-2.0"
repository = "https://github.com/nuro-rust/nuro"
readme = "../../README.md"

[features]
default = []
openai = ["dep:reqwest", "dep:serde"]

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio-stream = { workspace = true }

nuro-core = { version = "0.1.0", path = "../nuro-core" }

[dev-dependencies]
tokio = { workspace = true }
