[package]
name = "nuro-mcp"
version = "0.1.0"
edition = "2024"
description = "Minimal MCP protocol implementation for Nuro."
license = "Apache-2.0"
repository = "https://github.com/nuro-rust/nuro"
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

nuro-core = { version = "0.1.0", path = "../nuro-core" }
