[package]
name = "nuro-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

nuro-core = { path = "../nuro-core" }
nuro-runtime = { path = "../nuro-runtime" }
nuro-llm = { path = "../nuro-llm" }
nuro-tools = { path = "../nuro-tools" }
