[package]
name = "nuro-server"
version = "0.1.0"
edition = "2024"
description = "HTTP server utilities for Nuro."
license = "Apache-2.0"
repository = "https://github.com/nuro-rust/nuro"
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

nuro-core = { version = "0.1.0", path = "../nuro-core" }
nuro-runtime = { version = "0.1.0", path = "../nuro-runtime" }
nuro-llm = { version = "0.1.0", path = "../nuro-llm" }
nuro-tools = { version = "0.1.0", path = "../nuro-tools" }
